# OpenABM-Covid19

./: .Rbuildignore  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESCRIPTION  DESCRIPTION.in  Dockerfile  LICENSE  Makefile  NAMESPACE  OpenABM-Covid19.Rproj  README.md  build-Rpkg-win.bat  configure.ac  docs.md  mkdocs.yml  openCovid.files  package-for-CRAN.sh  run.sh
R/: MetaModel.R  Model.R  Network.R  OpenABMCovid19.R  Parameters.R  Simulation.R  Strain.R  Vaccine.R  VaccineSchedule.R  covid19.R  demographics.R  model.R  plotting.R  read-only.R  util.R
data/: baseline.rda
doc/: notes.md
docs/: index.md
documentation/: Parameters_baseline.csv  Parameters_infectious_rate.csv  Parameters_scenarios.csv  Parameters_sensitivity_analyses.csv  covid19.md  covid19_model.tex  economic_model.ipynb  economic_model.md  lib.bib  parameter_dictionary.md
examples/: economics_simulator.ipynb  economics_visualisation.ipynb  example_101.R  example_101.ipynb  example_101.py  example_102.R  example_102.Rmd  example_102.ipynb  example_extended_output.ipynb  example_multi_strain_vaccinate.R  example_multi_strain_vaccinate.py  example_multiple_working_sectors.ipynb  example_quarantine_reasons.py  example_recursive_tests.ipynb  example_run_simulation_with_economics.py  example_run_simulation_with_lockdown.py  example_run_spread_model_for_economics.py  example_spatial_sim.py  example_spatial_utils.py  example_user_defined_networks.ipynb  example_utils.py  example_vaccination.R  examples_add_network.R  geo_plot.py  multi_region.py  multi_run_simulator.py  plotting.py  (+3 more)
(+834 files in other folders)
